objects/CommandCenter__Components__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__ChangeId_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ChangeId_ExternalID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__ChangeId__c</fullName>
        <externalId>true</externalId>
        <label>ChangeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__CommitId__c</fullName>
        <label>CommitId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Commit_Message__c</fullName>
        <label>Commit Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Committer_Name__c</fullName>
        <label>Committer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Defect_Name__c</fullName>
        <label>Defect Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__User_Story_Name__c</fullName>
        <label>User Story Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>